--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,11 +22,13 @@ cache:
     - node_modules/     
   key: "$CI_BUILD_REPO" 
 build:
-  image: node
+  image: node:alpine
   stage: deploy
-  script:
+  before_script:
+    - apk add g++ make python
     - npm install
     - npm install @quasar/cli
+  script:
     - quasar build
     - firebase use dudu-solutions --token $FIREBASE_TOKEN
     - firebase deploy --only hosting -m "Pipe $CI_PIPELINE_ID Build $CI_BUILD_ID" --token $FIREBASE_TOKEN
