Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,9 @@ build:
   stage: deploy
   before_script:
     - apk update
-    - apk add --update --no-cache curl py-pip
+    - apk add --update --no-cache curl py-pip python \
+        make \
+        g++ \
     - npm install
     - npm install @quasar/cli
   script:
