--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,7 @@ build:
   image: node:alpine
   stage: deploy
   before_script:
-    - apk update
-    - apk add --update --no-cache curl py-pip python
+    - apk update && apk upgrade && apk add python3
     - npm install
     - npm install @quasar/cli
   script:
