--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ build:
   image: node:alpine
   stage: deploy
   before_script:
-    - apk update && apk upgrade && apk add python3
+    - apk add --update --no-cache
+    - apk add --no-cache --virtual .gyp python3 make g++
     - npm install
     - npm install @quasar/cli
   script:
