--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build:
   stage: deploy
   before_script:
     - apk add --update --no-cache
-    - apk add --no-cache --virtual .gyp python3 make g++
+    - apk add --no-cache --virtual .gyp python make g++
     - npm install
     - npm install @quasar/cli
   script:
