--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build:
   stage: deploy
   before_script:
     - apk add --update --no-cache
-    - apk --no-cache --virtual build-dependencies add
+    - apk --no-cache --virtual build-dependencies add python
     - npm install
     - npm install @quasar/cli
   script:
