--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ build:
     - apk --no-cache --virtual build-dependencies add python
     - npm install
     - npm install -g @quasar/cli
+    - npm install -g firebase-tools
   script:
     - quasar build
     - firebase use dudu-solutions --token $FIREBASE_TOKEN
