--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.18.0
-      - run: npm ci && npm run build && npm install -g @quasar/cli && npm install -g firebase-tools && quasar build
+      - run: npm ci && npm install -g @quasar/cli && npm install -g firebase-tools && quasar build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
