--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,5 +32,5 @@ build:
     - npm install -g firebase-tools
   script:
     - quasar build
-    - firebase use dudu-solutions --token $FIREBASE_TOKEN
-    - firebase deploy --only hosting -m "Pipe $CI_PIPELINE_ID Build $CI_BUILD_ID" --token $FIREBASE_TOKEN
+    #- firebase use dudu-solutions --token $FIREBASE_TOKEN
+    #- firebase deploy --only hosting -m "Pipe $CI_PIPELINE_ID Build $CI_BUILD_ID" --token $FIREBASE_TOKEN
